nginx/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
   name: nginx-deployment
   namespace: meow
   labels:
      app: nginx-dep
      environment: production
spec:
   replicas: 2
   template:
      metadata:
         labels:
            app: nginx-pod
      spec:
         containers:
         - image: nginx
           name: nginx-container
           ports:
           - containerPort: 80
