nginx/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meow-ingress
  namespace: meow
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
    - hosts:
      - meocon.com
      secretName: meocon.com-tsl
  
  rules:
  - host: meocon.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 8000
